--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                         <nav>
                             <ul id="mainmenu">
                                 <li><a class="active" href="#top">Miss Usi</a></li>
-                                <li><a href="#contestants-profile">Contestants Profile   </a></li>
+                                <li><a href="#contestants-profile">Contestants Profile</a></li>
+                                <li><a href="#section-judges">Judges</a></li>
                                 <li><a href="#section-tickets">Tickets</a></li>
                                 <li><a href="#section-info">Contact</a></li>
                                 <li><a href="#downloadables">Downloadables</a></li>
@@ -124,7 +125,7 @@
                     <div class="row">
                         <div class="col-md-12 text-center">
                             <h2><span class="id-color">Miss Usi</span> Dignitaries</h2>
-                            <p class="lead">Come and experience the glamour of USI DAY</p>
+                            <p class="lead">Come and experience the glamour of Miss Usi</p>
                             <div class="spacer-single"></div>
                         </div>
 
@@ -474,6 +475,66 @@
                 </div>
             </section>
             <!-- section close -->
+
+            <section id="section-judges">
+                <div class="container relative">
+                    <div class="row">
+                        <div class="col-md-12 text-center">
+                            <h2><span class="id-color">Miss Usi</span> Judges</h2>
+                            <p class="lead">Articulation, Quality, Creativity and Presentation.</p>
+                            <div class="spacer-single"></div>
+                        </div>
+
+                        <div class="col-md-4 ">
+                            <div class="profile_pic text-center">
+                                <figure class="picframe mb30">
+                                    <a class="image-popup" href="images/team/j1.jpeg">
+                                        <span class="overlay-v">
+                                            <span>You are all welcome</span>
+                                        </span>
+                                    </a>
+                                    <img src="images/team/j1.jpeg" class="img-responsive" alt="">
+                                </figure>
+
+                                <h3>Abiodun Lincoln Awoyomi (USA)</h3>
+                                <span class="subtitle"> JUDGE 1</span>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4 mb30">
+                            <div class="profile_pic text-center">
+                                <figure class="picframe mb30">
+                                    <a class="image-popup" href="images/team/j2.jpeg">
+                                        <span class="overlay-v">
+                                            <span>...</span>
+                                        </span>
+                                    </a>
+                                    <img src="images/team/j2.jpeg" class="img-responsive" alt="">
+                                </figure>
+
+                                <h3>Miss Ajayi Oluwasefunmi</h3>
+                                <span class="subtitle">JUDGE 2</span>
+                            </div>
+                        </div>
+
+                        <!-- <div class="col-md-4 mb30">
+                            <div class="profile_pic text-center">
+                                <figure class="picframe mb30">
+                                    <a class="image-popup" href="images/team/3.png">
+                                        <span class="overlay-v">
+                                            <span>...</span>
+                                        </span>
+                                    </a>
+                                    <img src="images/team/3.png" class="img-responsive" alt="">
+                                </figure>
+
+                                <h3>Prof. Oluwole Agbede</h3>
+                                <span class="subtitle">President, Egbe Omo Usi</span>
+                            </div>
+                        </div> -->
+                    </div>
+                </div>
+            </section>
 
             <!-- section begin -->
             <section id="section-testimonial" class="text-light no-top no-bottom" data-stellar-background-ratio=".2">
