--- a/index.html
+++ b/index.html
@@ -517,21 +517,21 @@
                             </div>
                         </div>
 
-                        <!-- <div class="col-md-4 mb30">
+                        <div class="col-md-4 mb30">
                             <div class="profile_pic text-center">
                                 <figure class="picframe mb30">
-                                    <a class="image-popup" href="images/team/3.png">
+                                    <a class="image-popup" href="images/team/j3.jpeg">
                                         <span class="overlay-v">
                                             <span>...</span>
                                         </span>
                                     </a>
-                                    <img src="images/team/3.png" class="img-responsive" alt="">
+                                    <img src="images/team/j3.jpeg" class="img-responsive" alt="">
                                 </figure>
 
-                                <h3>Prof. Oluwole Agbede</h3>
-                                <span class="subtitle">President, Egbe Omo Usi</span>
+                                <h3>Comrade Ayodeji Ologun</h3>
+                                <span class="subtitle">JUDGE 3</span>
                             </div>
-                        </div> -->
+                        </div>
                     </div>
                 </div>
             </section>
