--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@
                         <div class="col-md-4 text-center" id="downloadables">
                             <i class="icon-download id-color mb20 size40"></i>
                             <h3>Downloadables</h3>
-                            <p><a style="color: #FBA507;" href="images/team/campdaily.pdf"><b>CAMP DAILY ACTIVITIES AND SCHEDULES</b></a><br>
+                            <p><a style="color: #FBA507;" href="images/team/campdaily.pdf"><b>CAMP DAILY ACTIVITIES & SCHEDULES</b></a><br>
                             <a style="color: #FBA507;" href="images/team/CAMPandprospectus.pdf"><b>CAMP & PROSPECTUS</b></a><br>
                             <a style="color: #FBA507;" href="images/team/ScoretemplateandSchedules.pdf"><b>SCORE TEMPLATE & SCHEDULES</b></a></p>
                         </div>
