--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                                                             <span><b>CLAN(FAMILY)</b></span>
                                                         </div>
                                                         <div class="sc-info">
-                                                            <h3 style="color:#000000">Sunmisola Olarenwaju</h3>
+                                                            <h3 style="color:#000000">Sunmisola Olarewaju</h3>
                                                             <!-- <p><b>About:</b> The procedure for normal check-in, Receiving, Registration<br> -->
                                                             <b>Institution:</b> Batholomew College of Health, Ilorin, Kwara State.<br>
                                                             <b>current Job:</b> Student <br>
