--- a/index.html
+++ b/index.html
@@ -674,10 +674,11 @@
                                                     <div class="bottom">
                                                         <ul>
                                                             <li><i class="icon_check"></i>5 Seaters</li>
-                                                            <li><i class="icon_check"></i>VIP Table</li>
-                                                            <li><i class="icon_check"></i>Drinks</li>
+                                                            <li><i class="icon_check"></i>Wine</li>
+                                                            <li><i class="icon_check"></i>Asun</li>
                                                             <li><i class="icon_check"></i>Barbecue</li>
-                                                            <li><i class="icon_check"></i>Usi Day Brochure</li>
+                                                            <li><i class="icon_check"></i>Small Chops</li>
+                                                            <li><i class="icon_check"></i>Juice</li>
                                                         </ul>
                                                         <a href="https://flutterwave.com/pay/missusisilver" class="btn btn-custom">Get Ticket</a>
                                                     </div>
@@ -693,10 +694,12 @@
                                                     <div class="bottom">
                                                         <ul>
                                                             <li><i class="icon_check"></i>5 Seaters</li>
-                                                            <li><i class="icon_check"></i>VVIP Table</li>
-                                                            <li><i class="icon_check"></i>Drinks</li>
+                                                            <li><i class="icon_check"></i>Wine</li>
+                                                            <li><i class="icon_check"></i>Asun</li>
                                                             <li><i class="icon_check"></i>Barbecue</li>
-                                                            <li><i class="icon_check"></i>Usi Day Brochure</li>
+                                                            <li><i class="icon_check"></i>Small Chops</li>
+                                                            <li><i class="icon_check"></i>Juice</li>
+                                                            <li><i class="icon_check"></i>Soft Drinks</li>
                                                         </ul>
                                                         <a href="https://flutterwave.com/pay/missusigold" class="btn btn-custom">Get Ticket</a>
                                                     </div>
@@ -712,10 +715,13 @@
                                                     <div class="bottom">
                                                         <ul>
                                                             <li><i class="icon_check"></i>5 Seaters</li>
-                                                            <li><i class="icon_check"></i>VVIP Table</li>
-                                                            <li><i class="icon_check"></i>Drinks</li>
+                                                            <li><i class="icon_check"></i>Wine</li>
+                                                            <li><i class="icon_check"></i>Asun</li>
                                                             <li><i class="icon_check"></i>Barbecue</li>
-                                                            <li><i class="icon_check"></i>Usi Day Brochure</li>
+                                                            <li><i class="icon_check"></i>Small Chops</li>
+                                                            <li><i class="icon_check"></i>Juice</li>
+                                                            <li><i class="icon_check"></i>Soft Drinks</li>
+                                                            <li><i class="icon_check"></i>Vodka</li>
                                                         </ul>
                                                         <a href="https://flutterwave.com/pay/missusiplat" class="btn btn-custom">Get Ticket</a>
                                                     </div>
