--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                                                     <div class="schedule-item">
                                                         <div class="sc-time">HEIGHT - NIL</div>
                                                         <div class="sc-pic">
-                                                            <img src="images/team/sunmisola.png" alt="">
+                                                            <img src="images/team/sunmisola.jpg" alt="">
                                                         </div>
                                                         <div class="sc-name">
                                                             <h4>EBI IJANA</h4>
@@ -582,16 +582,16 @@
                                     </div>
                                 </div>
 
-                                <!-- <div class="col-md-6 item">
+                                <div class="col-md-6 item">
                                     <div class="de_testi opt-2">
                                         <blockquote>
-                                            <p>I learn many digital things! A wonderful event thank you! The best event as it proved by quality. I would definitely return for future events.</p>
+                                            <p>I felicitate heartily with the king Oba, Adedayo George Akande, and the Usi Sons and daughters both at home and in diaspora on the 40th anniversary of Usi Day celebration.</p>
                                             <div class="de_testi_by">
-                                                Jenny, Student
+                                                <b>Jegede Richard</b> | CEO, Dynamic Wear.
                                             </div>
                                         </blockquote>
                                     </div>
-                                </div> -->
+                                </div>
 								
                             </div>
                         </div>
